--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="star, star-descontos, descontos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.cs">
+    <meta name="description"
+        content="Star Proteção Veicular oferece seguro de veículo completo com proteção contra roubo, danos, furto, e acidentes. Garantia de reparo rápido, assistência 24 horas e preço acessível. Proteção total para veículos de motoristas, empresas e frotas. Além disso, Star Decontos oferece descontos exclusivos em serviços como lavagem de veículos, food trucks, lanchonetes e muito mais. Aproveite promoções imperdíveis e cupons para economizar com qualidade!">
+    <link rel="stylesheet" href="style.css">
     <title>Star Descontos</title>
 </head>
-<h1>ola mundo</h1>
 
 <body>
+    <header>
+        <h1>Star Descontos</h1>
+    </header>
+
+    <main>
+        <p>Bem-vindo ao Star Descontos! Aproveite nossas ofertas exclusivas.</p>
+    </main>
+
     <script src="script.js"></script>
 </body>
 
