--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Star Proteção Veicular oferece seguro de veículo completo com proteção contra roubo, danos, furto, e acidentes. Garantia de reparo rápido, assistência 24 horas e preço acessível. Proteção total para veículos de motoristas, empresas e frotas. Além disso, Star Decontos oferece descontos exclusivos em serviços como lavagem de veículos, food trucks, lanchonetes e muito mais. Aproveite promoções imperdíveis e cupons para economizar com qualidade!">
+    <meta name="keywords"
+        content="seguro de veículo, proteção veicular, seguro automotivo, seguro de carros, cobertura completa, assistência 24 horas, seguro acessível, proteção contra roubo e acidentes, garantia de reparo rápido, seguro sem burocracia, seguro para motoristas, seguro para empresas, seguro para frotas, Star Proteção Veicular, descontos automotivos, promoções e cupons, lavagem de veículos, food truck, lanchonetes, ofertas Star Descontos, seguro de veículo em Pouso Redondo, proteção veicular em Pouso Redondo, seguro automotivo Pouso Redondo, seguro para carros em Pouso Redondo, seguro de veículo em Agrolândia, proteção veicular em Agrolândia, seguro automotivo Agrolândia, seguro para carros em Agrolândia, seguro de veículo em Taió, proteção veicular em Taió, seguro automotivo Taió, seguro para carros em Taió">
+    <meta name="author" content="Adrian Raul Ribeiro">
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="index, nofollow">
     <title>Star Descontos</title>
 </head>
 
