--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Adrian Raul Ribeiro">
     <link rel="stylesheet" href="style.css">
     <meta name="robots" content="index, nofollow">
+    <meta name="google-site-verification" content="I8svPgpTLqOutMoJO_w1_leCMwsVvx73BbM5j-CMqYc" />
     <title>Star Descontos</title>
 </head>
 
