--- a/index.html
+++ b/index.html
@@ -12,16 +12,126 @@
     <link rel="stylesheet" href="style.css">
     <meta name="robots" content="index, nofollow">
     <meta name="google-site-verification" content="I8svPgpTLqOutMoJO_w1_leCMwsVvx73BbM5j-CMqYc" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>Star Descontos</title>
 </head>
 
 <body>
     <header>
-       
+       <div class="conteiner">
+        <nav>
+            <div class="menu">
+                <div class="menu_mobile_bar">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+                <div class="text_menu">
+                    <h1>Star Descontos</h1>
+                </div>
+            </div>
+            <div class="menu_mobile">
+                <ul> 
+                    <li>Sobre Nós</li>
+                    <li>O que é o Star Descontos?</li>
+                </ul>
+            </div>
+        </nav>
+       </div>
     </header>
 
     <main>
-        
+        <div class="conteiner">
+            <div class="conteiner_conteudo">
+                <div class="area_filtro">
+                    <div class="area_conteudo_filtro">
+                        <div class="filtro">
+                            <h1>FILTRO:</h1>
+                            <button>CIDADE</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="conteiner">
+            <div class="conteiner_conteudo">
+                <div class="area">
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div><div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div>
+                    <div class="area_conteudo">
+                        <div class="area_img">
+                            <img src="AJ VENTURI-02.png">
+                        </div>
+                        <div class="area_text">
+                            <h1>Nome: Aj venturi</h1>
+                            <h1>Tipo: Farmacia</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="script.js"></script>
