--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="conteiner">
             <div class="conteiner_conteudo">
                 <div class="area">
-                    <div class="area_conteudo">
+                    <div class="area_conteudo sm">
                         <div class="area_img">
                             <img src="AJ VENTURI-02.png">
                         </div>
@@ -120,7 +120,7 @@
                             <h1>Tipo: Farmacia</h1>
                         </div>
                     </div>
-                    <div class="area_conteudo">
+                    <div class="area_conteudo sb">
                         <div class="area_img">
                             <img src="AJ VENTURI-02.png">
                         </div>
