--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <meta name="description"
         content="Star Proteção Veicular oferece seguro de veículo completo com proteção contra roubo, danos, furto, e acidentes. Garantia de reparo rápido, assistência 24 horas e preço acessível. Proteção total para veículos de motoristas, empresas e frotas. Além disso, Star Decontos oferece descontos exclusivos em serviços como lavagem de veículos, food trucks, lanchonetes e muito mais. Aproveite promoções imperdíveis e cupons para economizar com qualidade!">
     <meta name="keywords"
