--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Star Proteção Veicular oferece seguro de veículo completo com proteção contra roubo, danos, furto, e acidentes. Garantia de reparo rápido, assistência 24 horas e preço acessível. Proteção total para veículos de motoristas, empresas e frotas. Além disso, Star Decontos oferece descontos exclusivos em serviços como lavagem de veículos, food trucks, lanchonetes e muito mais. Aproveite promoções imperdíveis e cupons para economizar com qualidade!">
     <meta name="keywords"
@@ -23,20 +23,23 @@
        <div class="conteiner">
         <nav>
             <div class="menu">
-                <div class="menu_mobile_bar">
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
+                <div class="menu_area">
+                    <div class="menu_mobile_bar">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
+                    <div class="text_menu">
+                        <h1>Star Descontos</h1>
+                    </div>
+                    
+                    <div class="menu_mobile">
+                        <ul> 
+                            <li>Sobre Nós</li>
+                            <li>O que é o Star Descontos?</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="text_menu">
-                    <h1>Star Descontos</h1>
-                </div>
-            </div>
-            <div class="menu_mobile">
-                <ul> 
-                    <li>Sobre Nós</li>
-                    <li>O que é o Star Descontos?</li>
-                </ul>
             </div>
         </nav>
        </div>
@@ -60,7 +63,7 @@
                 <div class="area">
                     <div class="area_conteudo sm">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png">
+                            <img src="AJ VENTURI-02.png" alt="ajventuri">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
