--- a/stardescontos.html
+++ b/stardescontos.html
@@ -21,12 +21,14 @@
         <div class="conteiner">
          <nav>
              <div class="menu">
-                 <div class="menu_mobile_seta">
-                     <img src="setadireita.jpg" >
-                 </div>
-                 <div class="text_menu fm">
-                     <h1>O que é o Star Descontos?</h1>
-                 </div>
+                <div class="menu_area">
+                    <div class="menu_mobile_seta">
+                        <img src="setadireita.jpg" >
+                    </div>
+                    <div class="text_menu fm">
+                        <h1>O que é o Star Descontos?</h1>
+                    </div>
+                </div>
              </div>
          </nav>
         </div>
