--- a/sobrenos.html
+++ b/sobrenos.html
@@ -21,12 +21,14 @@
         <div class="conteiner">
          <nav>
              <div class="menu">
-                 <div class="menu_mobile_seta">
-                     <img src="setadireita.jpg" >
-                 </div>
-                 <div class="text_menu">
-                     <h1>Star Descontos</h1>
-                 </div>
+                <div class="menu_area">
+                    <div class="menu_mobile_seta">
+                        <img src="setadireita.jpg" alt="seta para retorna para o link correto">
+                    </div>
+                    <div class="text_menu">
+                        <h1>Sobre Nós</h1>
+                    </div>
+                </div>
              </div>
          </nav>
         </div>
