--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     
                     <div class="menu_mobile">
                         <ul> 
-                            <li>Sobre Nós</li>
-                            <li>O que é o Star Descontos?</li>
+                            <li><a href="sobrenos.html">Sobre Nós</a></li>
+                            <li><a href="stardescontos.html">O que é o Star Descontos?</a></li>
                         </ul>
                     </div>
                 </div>
