--- a/index.html
+++ b/index.html
@@ -14,35 +14,37 @@
     <meta name="google-site-verification" content="I8svPgpTLqOutMoJO_w1_leCMwsVvx73BbM5j-CMqYc" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <title>Star Descontos</title>
 </head>
 
 <body>
     <header>
-       <div class="conteiner">
-        <nav>
-            <div class="menu">
-                <div class="menu_area">
-                    <div class="menu_mobile_bar">
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                    </div>
-                    <div class="text_menu">
-                        <h1>Star Descontos</h1>
-                    </div>
-                    
-                    <div class="menu_mobile">
-                        <ul> 
-                            <li><a href="sobrenos.html">Sobre Nós</a></li>
-                            <li><a href="stardescontos.html">O que é o Star Descontos?</a></li>
-                        </ul>
+        <div class="conteiner">
+            <nav>
+                <div class="menu">
+                    <div class="menu_area">
+                        <div class="menu_mobile_bar">
+                            <div class="bar"></div>
+                            <div class="bar"></div>
+                            <div class="bar"></div>
+                        </div>
+                        <div class="text_menu">
+                            <h1>Star Descontos</h1>
+                        </div>
+
+                        <div class="menu_mobile">
+                            <ul>
+                                <li><a href="pages/sobrenos.html">Sobre Nós</a></li>
+                                <li><a href="pages/stardescontos.html">O que é o Star Descontos?</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-       </div>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -63,7 +65,7 @@
                 <div class="area">
                     <div class="area_conteudo sm">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png" alt="ajventuri">
+                            <img src="/imagens/logos/AJ VENTURI-02.png" alt="Logo da Farmacia aj venturi">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
@@ -114,7 +116,8 @@
                             <h1>Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
                         </div>
-                    </div><div class="area_conteudo">
+                    </div>
+                    <div class="area_conteudo">
                         <div class="area_img">
                             <img src="AJ VENTURI-02.png">
                         </div>
