--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="area">
                     <div class="area_conteudo sm">
                         <div class="area_img">
-                            <img src="/imagens/logos/AJ VENTURI-02.png" alt="Logo da Farmacia aj venturi">
+                            <img src="/img/logos/aj.png" alt="Logo da Farmacia aj venturi">
                         </div>
                         <div class="area_text">
                             <h1>Nome: Aj venturi</h1>
