--- a/pages/sobrenos.html
+++ b/pages/sobrenos.html
@@ -27,7 +27,7 @@
                 <div class="menu">
                     <div class="menu_area">
                         <div class="menu_mobile_seta">
-                            <img src="/imagens/icones/setadireita.jpg" alt="seta para retorna para o link correto">
+                            <img src="/img/icones/setadireita.jpg" alt="seta para retorna para o link correto">
                         </div>
                         <div class="text_menu">
                             <h1>Sobre Nós</h1>
