--- a/pages/stardescontos.html
+++ b/pages/stardescontos.html
@@ -27,7 +27,7 @@
                 <div class="menu">
                     <div class="menu_area">
                         <div class="menu_mobile_seta">
-                            <img src="/imagens/icones/setadireita.jpg">
+                            <img src="/img/icones/setadireita.jpg" alt="seta para retorna para o link correto">
                         </div>
                         <div class="text_menu fm">
                             <h1>O que é o Star Descontos?</h1>
