--- a/pages/stardescontos.html
+++ b/pages/stardescontos.html
@@ -32,7 +32,7 @@
                             </a>
                         </div>
                         <div class="text_menu fm">
-                            <h1>O que é o Star <br> Descontos?</h1>
+                            <h1>O que é o Star Descontos?</h1>
                         </div>
                     </div>
                 </div>
