--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="seguro de veículo, proteção veicular, seguro automotivo, seguro de carros, cobertura completa, assistência 24 horas, seguro acessível, proteção contra roubo e acidentes, garantia de reparo rápido, seguro sem burocracia, seguro para motoristas, seguro para empresas, seguro para frotas, Star Proteção Veicular, descontos automotivos, promoções e cupons, lavagem de veículos, food truck, lanchonetes, ofertas Star Descontos, seguro de veículo em Pouso Redondo, proteção veicular em Pouso Redondo, seguro automotivo Pouso Redondo, seguro para carros em Pouso Redondo, seguro de veículo em Agrolândia, proteção veicular em Agrolândia, seguro automotivo Agrolândia, seguro para carros em Agrolândia, seguro de veículo em Taió, proteção veicular em Taió, seguro automotivo Taió, seguro para carros em Taió">
     <meta name="author" content="Adrian Raul Ribeiro">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="robots" content="index, nofollow">
     <meta name="google-site-verification" content="I8svPgpTLqOutMoJO_w1_leCMwsVvx73BbM5j-CMqYc" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
