--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="filtro_aberto">
+                    <div class="filtro_cidade">
+                        <input tipe="radio" name="cidade">
+                        <label>Pouso Redondo</label>
+                    </div>
+                    <div class="filtro_cidade">
+                        <input tipe="radio" name="cidade">
+                        <label>Taió</label>
+                    </div>
+                    <div class="filtro_cidade" name="cidade">
+                        <input tipe="radio">
+                        <label>Agrolândia/label>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="conteiner">
