fazendo algumas alterações para fazer o filtro aberto

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
                 </div>
                 <div class="filtro_aberto">
                     <div class="filtro_cidade">
-                        <input tipe="radio" name="cidade">
+                        <input type="radio" name="cidade">
                         <label>Pouso Redondo</label>
                     </div>
                     <div class="filtro_cidade">
-                        <input tipe="radio" name="cidade">
+                        <input type="radio" name="cidade">
                         <label>Taió</label>
                     </div>
                     <div class="filtro_cidade" name="cidade">
-                        <input tipe="radio">
-                        <label>Agrolândia/label>
+                        <input type="radio">
+                        <label>Agrolândia</label>
                     </div>
                 </div>
             </div>
