--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                     </div>
                 </div>
                 <div class="filtro_aberto">
+                    <div class="filtro_text">
+                        <h1>Cidades</h1>
+                    </div>
                     <div class="filtro_cidade">
                         <input type="radio" name="cidade">
                         <label>Pouso Redondo</label>
