--- a/index.html
+++ b/index.html
@@ -59,20 +59,45 @@
                     </div>
                 </div>
                 <div class="filtro_aberto">
-                    <div class="filtro_text">
-                        <h1>Cidades</h1>
-                    </div>
-                    <div class="filtro_cidade">
-                        <input type="radio" name="cidade">
-                        <label>Pouso Redondo</label>
-                    </div>
-                    <div class="filtro_cidade">
-                        <input type="radio" name="cidade">
-                        <label>Taió</label>
-                    </div>
-                    <div class="filtro_cidade" name="cidade">
-                        <input type="radio">
-                        <label>Agrolândia</label>
+                    <div class="filtro_area_aberto">
+                        <div class="filtro_cidade">
+                            <div class="filtro_text">
+                                <h1>Cidades</h1>
+                            </div>
+                            <div class="filtro_cidade_area">
+                                <div class="filtro_cidade">
+                                    <input type="radio" name="cidade">
+                                    <label>Pouso Redondo</label>
+                                </div>
+                                <div class="filtro_cidade">
+                                    <input type="radio" name="cidade">
+                                    <label>Taió</label>
+                                </div>
+                                <div class="filtro_cidade" name="cidade">
+                                    <input type="radio">
+                                    <label>Agrolândia</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="filtro_estabelecimento">
+                            <div class="filtro_text">
+                                <h1>Estabelecimentos</h1>
+                            </div>
+                            <div class="filtro_estabelecimento_area">
+                                <div class="filtro_estabelecimento">
+                                    <input type="radio" name="estabelecimento">
+                                    <label>Farmacia</label>
+                                </div>
+                                <div class="filtro_cidade">
+                                    <input type="radio" name="estabelecimento">
+                                    <label>lavação</label>
+                                </div>
+                                <div class="filtro_cidade" name="estabelecimento">
+                                    <input type="radio">
+                                    <label>Posto de Gasolina</label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
