iniciando alterações como botao no js

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="area_conteudo_filtro">
                         <div class="filtro">
                             <h1>FILTRO:</h1>
-                            <button>CIDADE</button>
+                            <button onclick="btn" case="cidade">CIDADE</button>
                         </div>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
                                     <input type="radio" name="cidade">
                                     <label>Taió</label>
                                 </div>
-                                <div class="filtro_cidade" name="cidade">
-                                    <input type="radio">
+                                <div class="filtro_cidade">
+                                    <input type="radio" name="cidade">
                                     <label>Agrolândia</label>
                                 </div>
                             </div>
@@ -88,16 +88,17 @@
                                     <input type="radio" name="estabelecimento">
                                     <label>Farmacia</label>
                                 </div>
-                                <div class="filtro_cidade">
+                                <div class="filtro_estabelecimento">
                                     <input type="radio" name="estabelecimento">
                                     <label>lavação</label>
                                 </div>
-                                <div class="filtro_cidade" name="estabelecimento">
-                                    <input type="radio">
+                                <div class="filtro_estabelecimento">
+                                    <input type="radio" name="estabelecimento">
                                     <label>Posto de Gasolina</label>
                                 </div>
                             </div>
                         </div>
+                        <button onclick="btn" case="filtrar">Filtrar</button>
                     </div>
                 </div>
             </div>
