--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button onclick="btn" case="filtrar">Filtrar</button>
+                        <button onclick="btn('filtrar')">Filtrar</button>
                     </div>
                 </div>
             </div>
