--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="filtro_area_aberto">
                         <div class="filtro_cidade">
                             <div class="filtro_text">
-                                <h1>Cidades</h1>
+                                <h1>Cidades:</h1>
                             </div>
                             <div class="filtro_cidade_area">
                                 <div class="filtro_cidade">
@@ -81,7 +81,7 @@
                         </div>
                         <div class="filtro_estabelecimento">
                             <div class="filtro_text">
-                                <h1>Estabelecimentos</h1>
+                                <h1>Estabelecimentos:</h1>
                             </div>
                             <div class="filtro_estabelecimento_area">
                                 <div class="filtro_estabelecimento">
