--- a/index.html
+++ b/index.html
@@ -58,47 +58,49 @@
                         </div>
                     </div>
                 </div>
-                <div class="filtro_aberto">
-                    <div class="filtro_area_aberto">
-                        <div class="filtro_cidade">
-                            <div class="filtro_text">
-                                <h1>Cidades:</h1>
+                <div class="modal">
+                    <div class="filtro_aberto">
+                        <div class="filtro_area_aberto">
+                            <div class="filtro_cidade">
+                                <div class="filtro_text">
+                                    <h1>Cidades:</h1>
+                                </div>
+                                <div class="filtro_cidade_area">
+                                    <div class="filtro_cidade">
+                                        <label>Pouso Redondo</label>
+                                        <input type="radio" name="cidade">
+                                    </div>
+                                    <div class="filtro_cidade">
+                                        <label>Taió</label>
+                                        <input type="radio" name="cidade">
+                                    </div>
+                                    <div class="filtro_cidade">
+                                        <label>Agrolândia</label>
+                                        <input type="radio" name="cidade">                                   
+                                    </div>
+                                </div>
                             </div>
-                            <div class="filtro_cidade_area">
-                                <div class="filtro_cidade">
-                                    <label>Pouso Redondo</label>
-                                    <input type="radio" name="cidade">
+                            <div class="filtro_estabelecimento">
+                                <div class="filtro_text">
+                                    <h1>Estabelecimentos:</h1>
                                 </div>
-                                <div class="filtro_cidade">
-                                    <label>Taió</label>
-                                    <input type="radio" name="cidade">
-                                </div>
-                                <div class="filtro_cidade">
-                                    <label>Agrolândia</label>
-                                    <input type="radio" name="cidade">                                   
+                                <div class="filtro_estabelecimento_area">
+                                    <div class="filtro_estabelecimento">
+                                        <label>Farmacia</label>
+                                        <input type="radio" name="estabelecimento">
+                                    </div>
+                                    <div class="filtro_estabelecimento">
+                                        <label>lavação</label>
+                                        <input type="radio" name="estabelecimento">
+                                    </div>
+                                    <div class="filtro_estabelecimento">
+                                        <label>Posto de Gasolina</label>
+                                        <input type="radio" name="estabelecimento">
+                                    </div>
                                 </div>
                             </div>
+                            <button class="mg" onclick="btn('filtrar')">Filtrar</button>
                         </div>
-                        <div class="filtro_estabelecimento">
-                            <div class="filtro_text">
-                                <h1>Estabelecimentos:</h1>
-                            </div>
-                            <div class="filtro_estabelecimento_area">
-                                <div class="filtro_estabelecimento">
-                                    <label>Farmacia</label>
-                                    <input type="radio" name="estabelecimento">
-                                </div>
-                                <div class="filtro_estabelecimento">
-                                    <label>lavação</label>
-                                    <input type="radio" name="estabelecimento">
-                                </div>
-                                <div class="filtro_estabelecimento">
-                                    <label>Posto de Gasolina</label>
-                                    <input type="radio" name="estabelecimento">
-                                </div>
-                            </div>
-                        </div>
-                        <button class="mg" onclick="btn('filtrar')">Filtrar</button>
                     </div>
                 </div>
             </div>
