--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="modal">
                     <div class="filtro_aberto">
                         <div class="filtro_area_aberto">
-                            <div class="filtro_cidade">
+                            <div class="filtro_cidade_text">
                                 <div class="filtro_text">
                                     <h1>Cidades:</h1>
                                 </div>
@@ -80,7 +80,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="filtro_estabelecimento">
+                            <div class="filtro_estabelecimento_text">
                                 <div class="filtro_text">
                                     <h1>Estabelecimentos:</h1>
                                 </div>
