adicionando css e html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal">
+                <div class="modalf">
                     <div class="filtro_aberto">
                         <div class="filtro_area_aberto">
                             <div class="filtro_cidade_text">
@@ -108,7 +108,7 @@
         <div class="conteiner">
             <div class="conteiner_conteudo">
                 <div class="area">
-                    <div class="area_conteudo sm">
+                    <div class="area_conteudo sm" onclick="click('ajventuri')">
                         <div class="area_img">
                             <img src="/img/logos/aj.png " alt="Logo da Farmacia aj venturi">
                         </div>
@@ -180,6 +180,49 @@
                             <h1>Tipo: Farmacia</h1>
                         </div>
                     </div>
+                </div>
+                <div class="modalc">
+                    <div class="area_content_open">
+                        <div class="area_content_return">
+                            <img src="img/icones/setadireita.jpg" alt="imagem com uma seta para direita">
+                            <h1>Star Descontos</h1>
+                        <div class="area_contet_img">
+                            <img src="img/logos/aj.png" alt="logo da farmacia aj venturi">
+                        </div>
+                        <div class="area_content_text">
+                            <div class="area_content_name">
+                                <h1>Nome:</h1>
+                                <h1>Aj Venturi</h1>
+                            </div>
+                            <div class="area_content_endereço">
+                                <div class="content_endereço_title">
+                                    <h1>Endereço:</h1>
+                                </div>
+                                <div class="content_endereço_body">
+                                    <h1>Rua:</h1>
+                                    <h1>HENRIQUE BICHELS N: 232</h1>
+                                    <h1>Bairro:</h1>
+                                    <h1>Centro</h1>
+                                </div>
+                                <div class="area_content_comunication">
+                                    <div class="midia">
+
+                                    </div>
+                                    <div class="phone">
+                                        <h1>Telefone</h1>
+                                        <h1>(47) 991967337</h1>
+                                    </div>
+                                </div>
+                                <div class="area_content_descont">
+                                    <h1>Descontos:</h1>
+                                    <h1>REMEDIOS GENERICOS</h1>
+                                    <h1>PERFUMARIA</h1>
+                                    <h1>VITAMINAS</h1>
+                                </div>
+                            </div>
+                        </div>
+                        <button>Entrar em contato</button>
+                    </div>    
                 </div>
             </div>
         </div>
