--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="modalc">
                     <div class="area_content_open">
                         <div class="area_content_return">
-                            <img src="img/icones/setadireita.jpg" alt="imagem com uma seta para direita">
+                            <img onclick =" click('ajventuri_m')" class="fechar_modal" src="img/icones/setadireita.jpg" alt="imagem com uma seta para direita">
                             <h1>Star Descontos</h1>
                         <div class="area_contet_img">
                             <img src="img/logos/aj.png" alt="logo da farmacia aj venturi">
