--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="conteiner">
             <div class="conteiner_conteudo">
                 <div class="area">
-                    <div class="area_conteudo sm" onclick="click('ajventuri')">
+                    <div class="area_conteudo sm" onclick="btns('ajventuri')">
                         <div class="area_img">
                             <img src="/img/logos/aj.png " alt="Logo da Farmacia aj venturi">
                         </div>
