--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <img src="/img/logos/aj.png " alt="Logo da Farmacia aj venturi">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
+                            <h1 class="p">Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                 <div class="modalc">
                     <div class="area_content_open">
                         <div class="area_content_return">
-                            <img onclick =" click('ajventuri_m')" class="fechar_modal" src="img/icones/setadireita.jpg" alt="imagem com uma seta para direita">
+                            <img class="fechar_modal" src="img/icones/setadireita.jpg" alt="imagem com uma seta para direita">
                             <h1>Star Descontos</h1>
                         <div class="area_contet_img">
                             <img src="img/logos/aj.png" alt="logo da farmacia aj venturi">
