--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <img src="AJ VENTURI-02.png">
                         </div>
                         <div class="area_text">
-                            <h1>Nome: Aj venturi</h1>
+                            <h1 class="p">Nome: Esquina</h1>
                             <h1>Tipo: Farmacia</h1>
                         </div>
                     </div>
