--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <img class="fechar_modal" src="img/icones/setadireita.jpg" alt="imagem com uma seta para direita">
                             <h1>Star Descontos</h1>
                         </div>
-                        <div class="area_contet_img">
+                        <div class="area_content_img">
                             <img src="img/logos/aj.png" alt="logo da farmacia aj venturi">
                         </div>
                         <div class="area_content_text">
