--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                                 </div>
                                 <div class="area_content_comunication">
                                     <div class="midia">
-
+                                        <h1> redes Socias:
+                                            <img src="img/logos/aj.png" width="35px">
                                     </div>
                                     <div class="phone">
                                         <h1>Telefone</h1>
