--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                 </div>
                                 <div class="area_content_comunication">
                                     <div class="midia">
-                                        <h1> redes Socias:</h1>
+                                        <h1>Redes Socias:</h1>
                                         <img src="img/logos/aj.png" width="35px">
                                     </div>
                                     <div class="phone">
@@ -217,9 +217,9 @@
                                 </div>
                                 <div class="area_content_descont">
                                     <h1>Descontos:</h1>
-                                    <h1>REMEDIOS GENERICOS</h1>
-                                    <h1>PERFUMARIA</h1>
-                                    <h1>VITAMINAS</h1>
+                                    <h1>Remedios Genericos</h1>
+                                    <h1>Perfumaria</h1>
+                                    <h1>Vitaminas</h1>
                                 </div>
                             </div>
                         </div>
