--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 </div>
                                 <div class="content_endereço_body">
                                     <h1>Rua:</h1>
-                                    <h1>HENRIQUE BICHELS N: 232</h1>
+                                    <h1>Henrique Bichels N: 232</h1>
                                     <h1>Bairro:</h1>
                                     <h1>Centro</h1>
                                 </div>
@@ -211,7 +211,7 @@
                                         <img src="img/logos/aj.png" width="35px">
                                     </div>
                                     <div class="phone">
-                                        <h1>Telefone</h1>
+                                        <h1>Telefone:</h1>
                                         <h1>(47) 991967337</h1>
                                     </div>
                                 </div>
