--- a/index.html
+++ b/index.html
@@ -217,9 +217,11 @@
                                 </div>
                                 <div class="area_content_descont">
                                     <h1>Descontos:</h1>
-                                    <h1>Remedios Genericos</h1>
-                                    <h1>Perfumaria</h1>
-                                    <h1>Vitaminas</h1>
+                                    <ul>
+                                        <li>Remedios Genericos</li>
+                                        <li>Perfumaria</li>
+                                        <li>Vitaminas</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
