--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                             <img src="/img/logos/aj.png " alt="Logo da Farmacia aj venturi">
                         </div>
                         <div class="area_text">
-                            <h1 class="p">Nome: Aj venturi</h1>
+                            <h1 class="">Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
                         <div class="area_img">
-                            <img src="AJ VENTURI-02.png">
+                            <img src="img/logos/aj.png">
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Esquina</h1>
