--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <img src="/img/logos/aj.png " alt="Logo da Farmacia aj venturi">
                         </div>
                         <div class="area_text">
-                            <h1 class="as">Nome: Aj venturi</h1>
+                            <h1 class="p">Nome: Aj venturi</h1>
                             <h1>Tipo: Farmacia</h1>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Esquina</h1>
-                            <h1>Tipo: Farmacia</h1>
+                            <h1>Tipo: Lanchonete</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
