--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="area_text">
                             <h1 class="p">Nome: Esquina</h1>
-                            <h1>Tipo: Lanchonete</h1>
+                            <h1>Tipo: Lanchonetes</h1>
                         </div>
                     </div>
                     <div class="area_conteudo">
