--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div class="area_content_text">
                             <div class="area_content_name">
                                 <h1>Nome:</h1>
-                                <h1>Aj Venturi</h1>
+                                <h1 class="name"></h1>
                             </div>
                             <div class="area_content_endereço">
                                 <div class="content_endereço_title">
@@ -201,9 +201,9 @@
                                 </div>
                                 <div class="content_endereço_body">
                                     <h1>Rua:</h1>
-                                    <h1>Henrique Bichels N: 232</h1>
+                                    <h1 class="rua">Henrique Bichels N: 232</h1>
                                     <h1>Bairro:</h1>
-                                    <h1>Centro</h1>
+                                    <h1 class="bairro">Centro</h1>
                                 </div>
                                 <div class="area_content_comunication">
                                     <div class="midia">
@@ -212,12 +212,12 @@
                                     </div>
                                     <div class="phone">
                                         <h1>Telefone:</h1>
-                                        <h1>(47) 991967337</h1>
+                                        <h1 class="phones">(47) 991967337</h1>
                                     </div>
                                 </div>
                                 <div class="area_content_descont">
                                     <h1>Descontos:</h1>
-                                    <ul>
+                                    <ul class="produtos">
                                         <li>Remedios Genericos</li>
                                         <li>Perfumaria</li>
                                         <li>Vitaminas</li>
