atualizando js e html

--- a/index.html
+++ b/index.html
@@ -201,26 +201,23 @@
                                 </div>
                                 <div class="content_endereço_body">
                                     <h1>Rua:</h1>
-                                    <h1 class="rua">Henrique Bichels N: 232</h1>
+                                    <h1 class="rua"></h1>
                                     <h1>Bairro:</h1>
-                                    <h1 class="bairro">Centro</h1>
+                                    <h1 class="bairro"></h1>
                                 </div>
                                 <div class="area_content_comunication">
                                     <div class="midia">
                                         <h1>Redes Socias:</h1>
-                                        <img src="img/logos/aj.png" width="35px">
+                                        
                                     </div>
                                     <div class="phone">
                                         <h1>Telefone:</h1>
-                                        <h1 class="phones">(47) 991967337</h1>
+                                        <h1 class="phones"></h1>
                                     </div>
                                 </div>
                                 <div class="area_content_descont">
                                     <h1>Descontos:</h1>
                                     <ul class="produtos">
-                                        <li>Remedios Genericos</li>
-                                        <li>Perfumaria</li>
-                                        <li>Vitaminas</li>
                                     </ul>
                                 </div>
                             </div>
